--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "Start on Heroku: Node.js",
-  "description": "A barebones Node.js app using Express 4",
+  "description": "Um aplicativo barebones Node.js usando o Express 4",
   "repository": "https://github.com/raphaelMoraesTHE/simpleNxH.git",
   "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
   "keywords": ["node", "express", "heroku"],
